--- a/onesystem/src/main/webapp/index.html
+++ b/onesystem/src/main/webapp/index.html
@@ -36,28 +36,28 @@
 									<label class="col-sm-3 control-label">真实姓名</label>
 									<div class="col-sm-9">
 										<input class="form-control" id="name" name="name" type="text"
-											placeholder="用户真实姓名..." required>
+											placeholder="用户真实姓名" required>
 									</div>
 								</div>
 								<div class="form-group">
 									<label class="col-sm-3 control-label">手机号</label>
 									<div class="col-sm-9">
 										<input class="form-control" id="phoneNumber"
-											name="phoneNumber" type="text" placeholder="手机号..." required>
+											name="phoneNumber" type="text" placeholder="手机号" required>
 									</div>
 								</div>
 								<div class="form-group">
 									<label class="col-sm-3 control-label">登录密码</label>
 									<div class="col-sm-9">
 										<input class="form-control" id="password" name="password"
-											type="password" placeholder="登录密码..." required>
+											type="password" placeholder="登录密码" required>
 									</div>
 								</div>
 								<div class="form-group">
 									<label class="col-sm-3 control-label">确认密码</label>
 									<div class="col-sm-9">
 										<input class="form-control" id="rePassword" name="rePassword"
-											type="password" placeholder="确认密码..." required>
+											type="password" placeholder="确认密码" required>
 									</div>
 								</div>
 								<div class="form-group">
