--- a/onesystem/src/main/webapp/index.html
+++ b/onesystem/src/main/webapp/index.html
@@ -5,75 +5,36 @@
 <meta charset="utf-8">
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0, minimal-ui">
-<script type="text/javascript" charset="utf-8"
-	src="./public/jquery/js/jquery-3.3.1.js"></script>
-<script type="text/javascript" charset="utf-8"
-	src="./public/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="./public/jquery/js/jquery-3.3.1.js"></script>
+<script type="text/javascript" charset="utf-8" src="./public/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="index.js"></script>
-<link rel="stylesheet" type="text/css"
-	href="./public/bootstrap/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" href="./public/bootstrap/css/bootstrap.min.css" />
 </head>
 <body>
-	<div class="top-content">
-		<div class="inner-bg">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-4 col-sm-offset-7 form-box">
-						<div class="form-top">
-							<div class="form-top-left">
-								<a href="/LoginAction.do" id="backToLogin"><i
-									class="fa fa-arrow-left">返回登录</i></a>
-							</div>
-							<div class="form-top-right">
-								<h3 style="color: #ffffff">请输入注册信息</h3>
-							</div>
-						</div>
-						<hr>
-						<div class="form-bottom">
-							<form role="form" class="form-horizontal" id="Gt3GeneralForm"
-								name="Gt3GeneralForm" action="/RegisterAction.do" method="post">
-								<div class="form-group">
-									<label class="col-sm-3 control-label">真实姓名</label>
-									<div class="col-sm-9">
-										<input class="form-control" id="name" name="name" type="text"
-											placeholder="用户真实姓名" required>
-									</div>
-								</div>
-								<div class="form-group">
-									<label class="col-sm-3 control-label">手机号</label>
-									<div class="col-sm-9">
-										<input class="form-control" id="phoneNumber"
-											name="phoneNumber" type="text" placeholder="手机号" required>
-									</div>
-								</div>
-								<div class="form-group">
-									<label class="col-sm-3 control-label">登录密码</label>
-									<div class="col-sm-9">
-										<input class="form-control" id="password" name="password"
-											type="password" placeholder="登录密码" required>
-									</div>
-								</div>
-								<div class="form-group">
-									<label class="col-sm-3 control-label">确认密码</label>
-									<div class="col-sm-9">
-										<input class="form-control" id="rePassword" name="rePassword"
-											type="password" placeholder="确认密码" required>
-									</div>
-								</div>
-								<div class="form-group">
-									<div class="col-sm-3"></div>
-									<div class="col-sm-9">
-										<button type="button" id="btnEnter" name="btnEnter"
-											class="btn btn-warning btn-block" onclick="submitData();">注&nbsp;册&nbsp;账&nbsp;号</button>
-									</div>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
+<div class="container">
+	<form>
+		<div class="form-group">
+			<label for="exampleInputEmail1">手机号</label> <input
+				type="email" class="form-control" id="exampleInputEmail1"
+				placeholder="Email">
 		</div>
-	</div>
-	<a href="#" onClick="getCheckCode();">获取验证码</a>
+		<div class="form-group">
+			<label for="exampleInputPassword1">验证码</label> <input
+				type="password" class="form-control" id="exampleInputPassword1"
+				placeholder="Password">
+		</div>
+	    <div class="form-group">
+			<label for="exampleInputPassword1">输入密码</label> <input
+				type="password" class="form-control" id="exampleInputPassword1"
+				placeholder="Password">
+		</div>
+		<div class="form-group">
+			<label for="exampleInputPassword1">请再输入密码</label> <input
+				type="password" class="form-control" id="exampleInputPassword1"
+				placeholder="请再输入密码">
+		</div>
+		<button type="submit" class="btn btn-default">注册账号</button>
+	</form>
+</div>	
 </body>
 </html>
