--- a/onesystem/src/main/webapp/index.html
+++ b/onesystem/src/main/webapp/index.html
@@ -9,29 +9,30 @@
 <script type="text/javascript" charset="utf-8" src="./public/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="index.js"></script>
 <link rel="stylesheet" type="text/css" href="./public/bootstrap/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" href="./index.css" />
 </head>
 <body>
 <div class="container">
 	<form>
 		<div class="form-group">
-			<label for="exampleInputEmail1">手机号</label> <input
-				type="email" class="form-control" id="exampleInputEmail1"
-				placeholder="Email">
+			<label for="telephone">手机号</label> <input
+				type="email" class="form-control" id="telephone"
+				placeholder="请输入手机号码">
 		</div>
 		<div class="form-group">
 			<label for="exampleInputPassword1">验证码</label> <input
 				type="password" class="form-control" id="exampleInputPassword1"
-				placeholder="Password">
+				placeholder="请输入验证码">
 		</div>
 	    <div class="form-group">
 			<label for="exampleInputPassword1">输入密码</label> <input
 				type="password" class="form-control" id="exampleInputPassword1"
-				placeholder="Password">
+				placeholder="请输入密码">
 		</div>
 		<div class="form-group">
-			<label for="exampleInputPassword1">请再输入密码</label> <input
+			<label for="exampleInputPassword1">确认密码</label> <input
 				type="password" class="form-control" id="exampleInputPassword1"
-				placeholder="请再输入密码">
+				placeholder="请确认密码">
 		</div>
 		<button type="submit" class="btn btn-default">注册账号</button>
 	</form>
