--- a/onesystem/src/main/webapp/index.html
+++ b/onesystem/src/main/webapp/index.html
@@ -14,25 +14,21 @@
 <body>
 <div class="container">
 	<form>
-		<div class="form-group">
-			<label for="telephone">手机号</label> <input
-				type="email" class="form-control" id="telephone"
-				placeholder="请输入手机号码">
+		<div class="form-group"> 
+			<label for="telephone">手机号</label> 
+			<input type="text" class="form-control" id="telephone" placeholder="请输入手机号码">
 		</div>
 		<div class="form-group">
-			<label for="exampleInputPassword1">验证码</label> <input
-				type="password" class="form-control" id="exampleInputPassword1"
-				placeholder="请输入验证码">
+			<label for="checkCode">验证码</label> 
+			<input type="text" class="form-control" id="checkCode" placeholder="请输入验证码">
 		</div>
 	    <div class="form-group">
-			<label for="exampleInputPassword1">输入密码</label> <input
-				type="password" class="form-control" id="exampleInputPassword1"
-				placeholder="请输入密码">
+			<label for="password">输入密码</label> 
+			<input type="password" class="form-control" id="password" placeholder="请输入密码">
 		</div>
 		<div class="form-group">
-			<label for="exampleInputPassword1">确认密码</label> <input
-				type="password" class="form-control" id="exampleInputPassword1"
-				placeholder="请确认密码">
+			<label for="rePassword">确认密码</label> 
+			<input type="password" class="form-control" id="rePassword" placeholder="请确认密码">
 		</div>
 		<button type="submit" class="btn btn-default">注册账号</button>
 	</form>
