--- a/onesystem/src/main/webapp/static/html/register.html
+++ b/onesystem/src/main/webapp/static/html/register.html
@@ -5,9 +5,9 @@
 <meta charset="utf-8">
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0, minimal-ui">
-<script type="text/javascript" charset="utf-8" src="./public/jquery/js/jquery-3.3.1.js"></script>
-<script type="text/javascript" charset="utf-8" src="./public/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" charset="utf-8" src="index.js"></script>
+<script type="text/javascript"  src="./public/jquery/js/jquery-3.3.1.js"></script>
+<script type="text/javascript"  src="./public/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript"  src="../js/register.js"></script>
 <link rel="stylesheet" type="text/css" href="./public/bootstrap/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="./index.css" />
 </head>
