--- a/onesystem/src/main/webapp/static/html/register.html
+++ b/onesystem/src/main/webapp/static/html/register.html
@@ -5,22 +5,21 @@
 <meta charset="utf-8">
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0, minimal-ui">
-<script type="text/javascript"  src="./public/jquery/js/jquery-3.3.1.js"></script>
-<script type="text/javascript"  src="./public/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript"  src="../js/register.js"></script>
-<link rel="stylesheet" type="text/css" href="./public/bootstrap/css/bootstrap.min.css" />
-<link rel="stylesheet" type="text/css" href="./index.css" />
+<script type="text/javascript"  src="../../public/jquery/js/jquery-3.3.1.js"></script>
+<script type="text/javascript"  src="../../public/bootstrap/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="../../public/bootstrap/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" href="../css/register.css" />
 </head>
 <body>
 <div class="container">
-	<form>
+	<form id="registerForm">
 		<div class="form-group"> 
-			<label for="telephone">手机号</label> 
-			<input type="text" class="form-control" id="telephone" placeholder="请输入手机号码">
+			<label for="telephone">手机号</label>
+			<input type="text" class="form-control" id="telephone" v-model="telephone" placeholder="请输入手机号码">
 		</div>
 		<div class="form-group">
 			<label for="checkCode">验证码</label> 
-			<input type="text" class="form-control" id="checkCode" placeholder="请输入验证码">
+			<input type="text" class="form-control" id="checkCode" v-model="checkCode" placeholder="请输入验证码">
 		</div>
 	    <div class="form-group">
 			<label for="password">输入密码</label> 
@@ -30,8 +29,10 @@
 			<label for="rePassword">确认密码</label> 
 			<input type="password" class="form-control" id="rePassword" placeholder="请确认密码">
 		</div>
-		<button type="submit" class="btn btn-default">注册账号</button>
+		<button type="submit" class="btn btn-default" @click="submitForm">注册账号</button>
 	</form>
 </div>	
 </body>
+<script src="../../public/vue/js/vue-2.5.16.js"></script>
+<script type="text/javascript"  src="../js/register.js"></script>
 </html>
