--- a/onesystem/src/main/webapp/static/html/register.html
+++ b/onesystem/src/main/webapp/static/html/register.html
@@ -15,19 +15,19 @@
 	<form id="registerForm">
 		<div class="form-group"> 
 			<label for="telephone">手机号</label>
-			<input type="text" class="form-control" id="telephone" v-model="telephone" placeholder="请输入手机号码">
+			<input type="text"  id="telephone" v-model="telephone" placeholder="请输入手机号码">
 		</div>
 		<div class="form-group">
 			<label for="checkCode">验证码</label> 
-			<input type="text" class="form-control" id="checkCode" v-model="checkCode" placeholder="请输入验证码">
+			<input type="text"  id="checkCode" v-model="checkCode" placeholder="请输入验证码">
 		</div>
 	    <div class="form-group">
 			<label for="password">输入密码</label> 
-			<input type="password" class="form-control" id="password" placeholder="请输入密码">
+			<input type="password"  id="password" v-model="password" placeholder="请输入密码">
 		</div>
 		<div class="form-group">
 			<label for="rePassword">确认密码</label> 
-			<input type="password" class="form-control" id="rePassword" placeholder="请确认密码">
+			<input type="password"  id="rePassword" v-model="rePassword" placeholder="请确认密码">
 		</div>
 		<button type="submit" class="btn btn-default" @click="submitForm">注册账号</button>
 	</form>
